--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -64,7 +64,7 @@ body {
   body {
     display: flex;
     flex-direction: column;
-    min-height: 100dvh;
+    min-height: 100svh;
   }
 }
 
